--- a/ngClientDev/src/assets/config/langs/pl.json
+++ b/ngClientDev/src/assets/config/langs/pl.json
@@ -98,7 +98,8 @@
         "Edycja profilu",
         "Resetowanie hasła przez wysłanie e-maila z linkiem",
         "Dodanie daty do wiadomości",
-        "Tworzenie kolorystyki użytkownika"
+        "Tworzenie kolorystyki użytkownika",
+        "Lazy Load"
       ]
     }
   },
@@ -121,7 +122,7 @@
     "h3": "Zalogowani użytkownicy"
   },
   "room": {
-    "somebody": "Ktoś pisze",
+    "somebody": "Pisze",
     "send": "Wyślij",
     "exit": "X"
   }
